<resources>
    <string name="app_name">ORMLite Database Application</string>
    <string name="ormlite_android">ORMLite Android</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="mr_abc_def">Mr. Abc Def</string>
    <string name="_91_9023456789">+91 9023456789</string>
</resources>
